[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui/time_icon.png" type="Texture" id=1]
[ext_resource path="res://fonts/fffforwa.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/best_time_icon.png" type="Texture" id=3]
[ext_resource path="res://lvl_completed.gd" type="Script" id=4]
[ext_resource path="res://SaveLoadManager.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="LvlComplete" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -44.5
margin_right = 117.0
margin_bottom = 44.5
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 234.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 2 )
text = "Level Complete"

[node name="FinishTime" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 41.0
margin_right = 234.0
margin_bottom = 61.0
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="TimeIcon" type="TextureRect" parent="VBoxContainer/FinishTime"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="TimeText" type="Label" parent="VBoxContainer/FinishTime"]
margin_left = 95.0
margin_right = 159.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "00.00.00"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="BestTime" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 234.0
margin_bottom = 89.0
alignment = 1
__meta__ = {
"_editor_description_": ""
}

[node name="TimeIcon" type="TextureRect" parent="VBoxContainer/BestTime"]
margin_left = 75.0
margin_right = 91.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="TimeText" type="Label" parent="VBoxContainer/BestTime"]
margin_left = 95.0
margin_right = 159.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "--.--.--"
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="NewBestTime" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 97.0
margin_right = 234.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 3 )
text = "New Best Time!"
align = 1

[node name="SaveLoadManager" parent="." instance=ExtResource( 5 )]
